# ai-company-wars-red

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-hooks.yaml  =0.3  Dockerfile  LICENSE  README.en.md  README.md  pushed_by_api.md  pyproject.toml
.claude/skills/: dirsort.md
.github/workflows/: ci.yml
docs/: CODE.md  FILES.md  STRUCTURE.md
plugins/: example_classifier.py
src/dirsort/: __init__.py  __main__.py  cli.py  config.py  dupes.py  plugin_base.py  plugin_system.py  rename.py  rules.py  sorter.py  stats_enhanced.py  tui_app.py  undo.py  utils.py
src/dirsort/tui_screens/: __init__.py
tests/: __init__.py  test_cli.py  test_config.py  test_dupes.py  test_plugin_system.py  test_rename.py  test_sorter.py  test_sorter_extra.py  test_stats_enhanced.py  test_trial_verify.py  test_tui.py  test_undo.py  test_undo_extra.py  test_utils.py
