[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dirsort"
version = "0.5.0"
description = "智能文件目录整理 CLI 工具 — 一键解决杂乱目录的烦恼。支持按类型/日期分类、重复文件检测、批量重命名、Dry-run 预览、Undo 回滚、YAML 配置规则、JSON 输出。"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "file-organization", "file-sorter", "cli", "utility",
    "productivity", "directory-cleaner", "file-management",
    "python", "typer", "rich", "yaml",
    "tui", "textual", "terminal-ui",
    "duplicate-files", "batch-rename",
    "docker", "ai-agent", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
]
optional-dependencies = {dev = ["pytest>=7", "pytest-cov>=4", "pytest-asyncio>=0.21", "ruff>=0.3"], full = ["rich>=13.0.0", "pyyaml>=6.0"], tui = ["textual>=0.52"], all = ["dirsort[full,tui]"]}

[project.urls]
Homepage = "https://github.com/0717lq/ai-company-wars-red"
Repository = "https://github.com/0717lq/ai-company-wars-red"
BugTracker = "https://github.com/0717lq/ai-company-wars-red/issues"
Changelog = "https://github.com/0717lq/ai-company-wars-red/releases"

[project.scripts]
dirsort = "dirsort.cli:entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function call in argument defaults — required by Typer
    "B904",  # raise-within-try — allow bare raise in some cases
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
